--- a/app/22busscustomer/views/addprize.html
+++ b/app/22busscustomer/views/addprize.html
@@ -67,6 +67,22 @@
 					</div>
 
 					<div class="form-group">
+					 <label for="inputDate" class="col-sm-3 control-label">奖品logo</label>
+					 <div class="col-md-6">
+					      <img ng-src="{{info.logo}}" width="100%" height="200" ng-model="info.logo">
+					        <input type="file" nv-file-select uploader="uploader1" / ng-hide="hide===true" ><br/>
+					        <ul class="list-group">
+					          <li class="list-group-item" ng-repeat="item in uploader1.queue">
+					            文件名: <span ng-bind="item.file.name"></span>
+					            <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
+					            <div class="progress mt10">
+					              <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader1.progress + '%' }"></div>
+					            </div>
+					          </li>
+					        </ul>
+					 </div>
+					 </div>	
+					<div class="form-group">
 					 <label for="inputDate" class="col-sm-3 control-label">奖品图片1</label>
 					 <div class="col-md-6">
 					      <img ng-src="{{info.img}}" width="100%" height="200" ng-model="info.img">
