--- a/app/22busscustomer/views/maxpeople.html
+++ b/app/22busscustomer/views/maxpeople.html
@@ -6,10 +6,11 @@
     <div class="panel panel-default">
     <div class="panel-body">
     <div class="col-sm-12" style="height: 40px">
-        <div class="form-group form-inline ">
+        <label for="">一级人数列表</label>
+        <!--<div class="form-group form-inline ">
             <input type="text" class="form-control" ng-model="searchinfo.bind_company_code" placeholder="一级商客账号" style="border-color:coral">
             <button type="button" class="btn btn-primary pull-right" ng-click="saveauthority()" style="background-color:coral;border-color:coral">搜索</button>
-        </div>
+        </div>-->
     </div>
     </div>
     </div><!-- searchArea -->
@@ -26,7 +27,9 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.code}}</td>
-        <th class="col-md-4 text-center">{{10}}</th>         
+        <th class="col-md-4 text-center">
+          <a ng-click="seepeople(obj.code)" class="btn btn-success">查看人数</a>          
+        </th>         
         <td class="text-center">
           <a ng-click="limit(obj.code)" class="btn btn-danger">限制人数</a>
           <!--<span class="glyphicon glyphicon-remove" aria-hidden=""></span>-->
