--- a/app/21card/views/cardorderlist.html
+++ b/app/21card/views/cardorderlist.html
@@ -14,6 +14,8 @@
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <input type="text" class="form-control" ng-model="searchform.papersno" placeholder="身份证">
                   &nbsp;&nbsp;&nbsp;&nbsp;
+                  <input type="text" class="form-control" ng-model="searchform.cardno" placeholder="卡号">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
               </div>
               <div class="row mt10">
 				<label class="control-label">下单时间</label>&nbsp;&nbsp;
