--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -82,7 +82,7 @@
 	
 	
 	<!-- 票付通 -->
-	<div class="col-xs-12 col-md-12 mt10">
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_piaofutong'">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">商品id</label>
 			<div class="col-xs-10">
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-md-12 mt10">
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_piaofutong'">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">商品景区id</label>
 			<div class="col-xs-10">
@@ -108,7 +108,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-md-12 mt10">
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_piaofutong'">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">商品供应商id</label>
 			<div class="col-xs-10">
