分润设置加一级利润

--- a/app/07product/views/productinfoshareprofit.html
+++ b/app/07product/views/productinfoshareprofit.html
@@ -73,7 +73,7 @@
 						</div>-->
 					</div>
 					<div class="col-sm-6 mt10">
-						<font face="Courier" class="text-danger">利润率=居游价-成本价*(利润率+1)</font>
+						<font face="Courier" class="text-danger">二级利润=(居游价-成本价)*(1-利润率)</font>
 					</div>	
 				</div>
 			
