--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -43,23 +43,23 @@
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">利润率&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
-					<div class="col-xs-5">
+					<div class="col-xs-2">
 						<div class="input-group">							
 							<input type="number" class="form-control" placeholder="利润率" min='0'
-							ng-model="salefrobj.profit_ratio" value="0" ng-change="change()">
+							ng-model="salefrobj.profit_ratio" value="0" ng-change="change()" ng-disabled="profit.flag == '1'">
 							<span class="input-group-addon">%</span>
 						</div>
 					</div>
-					<!--<div class="col-xs-1">
-						<label for="lrl" class="text-right mt10">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+</label>
+					<div class="col-xs-1">
+						<label for="lrl" class="text-right mt10">一级利润</label>
 					</div>
 					<div class="col-xs-2">
 						<div class="input-group">							
-							<input type="number" class="form-control" placeholder="金额" min='0'
-							ng-model="salefrobj.profit_ratio" value="0" ng-change="changeJe()">
+							<input type="text" class="form-control" placeholder="金额" min='0'
+							ng-model="salefrobj.erjiprofit" value="0" ng-change="changeJe()" ng-disabled="profit.flag == '0'">
 							<span class="input-group-addon">¥</span>
 						</div>
-					</div>-->
+					</div>
 				</div>
 
 					<br/>
