--- a/app/02device/views/module.html
+++ b/app/02device/views/module.html
@@ -52,12 +52,12 @@
 		<label class="col-xs-2 control-label">设备状态</label>
 		<div class="col-xs-6">
 			<label class="radio-inline">
-			  <input type="radio" name="state" value="0"
+			  <input type="radio" name="state" ng-value="0"
 			  ng-model="obj.state"
 			  > 不可用
 			</label>
 			<label class="radio-inline">
-			  <input type="radio" name="state" value="1"
+			  <input type="radio" name="state" ng-value="1"
 			  ng-model="obj.state"
 			  > 可用
 			</label>
@@ -84,12 +84,12 @@
 		<label class="col-xs-2 control-label">散票-权限状态</label>
 		<div class="col-xs-6">
 			<label class="radio-inline">
-			  <input type="radio" name="auth_state" value="0"
+			  <input type="radio" name="auth_state" ng-value="0"
 			  ng-model="obj.auth_state"
 			  > 不启用
 			</label>
 			<label class="radio-inline">
-			  <input type="radio" name="auth_state" value="1"
+			  <input type="radio" name="auth_state" ng-value="1"
 			  ng-model="obj.auth_state"
 			  > 启用
 			</label>
@@ -100,12 +100,12 @@
 		<label class="col-xs-2 control-label">散票-是否多销验票</label>
 		<div class="col-xs-6">
 			<label class="radio-inline">
-			  <input type="radio" name="many_state" value="0"
+			  <input type="radio" name="many_state" ng-value="0"
 			  ng-model="obj.many_state"
 			  > 单独
 			</label>
 			<label class="radio-inline">
-			  <input type="radio" name="many_state" value="1"
+			  <input type="radio" name="many_state" ng-value="1"
 			  ng-model="obj.many_state"
 			  > 多张
 			</label>
@@ -116,12 +116,12 @@
 		<label class="col-xs-2 control-label">团票-权限状态</label>
 		<div class="col-xs-6">
 			<label class="radio-inline">
-			  <input type="radio" name="group_auth_state" value="0"
+			  <input type="radio" name="group_auth_state" ng-value="0"
 			  ng-model="obj.group_auth_state"
 			  > 不启用
 			</label>
 			<label class="radio-inline">
-			  <input type="radio" name="group_auth_state" value="1"
+			  <input type="radio" name="group_auth_state" ng-value="1"
 			  ng-model="obj.group_auth_state"
 			  > 启用
 			</label>
