--- a/app/21card/views/cardproduct.html
+++ b/app/21card/views/cardproduct.html
@@ -194,6 +194,26 @@
 	    </div>
   	</div>
 
+  	<div class="form-group">
+	    <label class="col-xs-3 control-label">是否分润</label>
+	    <div class="col-xs-2">
+	    	<label class="radio-inline">
+			  <input type="radio" name="isshareprofit" value="0"
+			  ng-model="obj.isshareprofit"
+			  > 不分润
+			</label>
+			<label class="radio-inline">
+			  <input type="radio" name="isshareprofit" value="1"
+			  ng-model="obj.isshareprofit"
+			  > 分润
+			</label>
+	    </div>
+	    <div class="col-xs-2" ng-show="obj.isshareprofit == 1">
+	    	<input type="number" class="form-control" placeholder="分润比例" min='0' ng-model="obj.proportion"
+			>
+	    </div>
+  	</div>
+
 	<div class="form-group">
 		<label class="col-xs-3 control-label">备注</label>
 		<div class="col-xs-9">
