--- a/app/07product/views/p_shareprofit.html
+++ b/app/07product/views/p_shareprofit.html
@@ -45,7 +45,7 @@
 					</div>
 					<div class="col-xs-2">
 						<div class="input-group">							
-							<input type="number" class="form-control" placeholder="利润率" min='0'
+							<input type="text" class="form-control" placeholder="利润率" min='0'
 							ng-model="salefrobj.profit_ratio" value="0" ng-change="change()" ng-disabled="profit.flag == '1'">
 							<span class="input-group-addon">%</span>
 						</div>
