--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -13,11 +13,13 @@
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <input type="text" class="form-control" ng-model="searchform.update_by" placeholder="登录账号">
                   &nbsp;&nbsp;&nbsp;&nbsp;
-                  <label class="control-label">卡池类型</label>&nbsp;&nbsp;
+                  <input type="text" class="form-control" ng-model="searchform.card_num" placeholder="卡号">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                  <!--<label class="control-label">卡池类型</label>&nbsp;&nbsp;
                   <select class="form-control" ng-model="searchform.pool_type"
 		              ng-options="type.value as type.label for type in typearr">
 		            	<option label="查询全部" value=""></option>
-	              </select>
+	              </select>-->
                   <button type="button" class="btn btn-default search pull-right" ng-click="search()">立即搜索</button>
                   <button type="button" class="btn btn-default search pull-right" ng-click="addcardpool()">创建卡池</button>
 
