--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -75,7 +75,7 @@
       max-size="maxSize" 
       class="pagination-sm" 
       boundary-links="true" 
-      ng-change="getlist()"
+      ng-change="search()"
       items-per-page="itemsPerPage"
       previous-text="上一页"
       next-text="下一页"
