'修改卡池详情已购买'

--- a/app/21card/views/releasecard.html
+++ b/app/21card/views/releasecard.html
@@ -17,7 +17,7 @@
             <div class="row mt10">
 	            <label for="inputLottry" class="control-label">已锁定数量</label>
 			    <input class="form-control text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.lock_card" style="width:150px">
-		        <label for="inputLottry" class="control-label">已挂失数量</label>
+		        <label for="inputLottry" class="control-label">已购买数量</label>
 		        <input class="form-control text-center" id="disabledInput" type="text" placeholder="" disabled ng-model="cardinfo.not_avail_card" style="width:150px">
             </div>
               
