--- a/app/22busscustomer/views/skacountlist.html
+++ b/app/22busscustomer/views/skacountlist.html
@@ -39,7 +39,7 @@
         <th class="col-md-2 text-center">身份证号</th>
         <th class="col-md-1 text-center">账号</th>
         <th class="col-md-1 text-center">区域</th>
-        <th class="col-md-2 text-center">行业(供货产品,产品提供价)</th>
+        <th class="col-md-2 text-center">行业</th>
         <th class="col-md-1 text-center">申请时间</th>
         <th class="col-md-1 text-center">状态</th>
         <th class="col-md-1 text-center">短信状态</th>
@@ -54,7 +54,6 @@
         <td class="text-center">{{obj.idcard}}</td>
         <td class="text-center">{{obj.ticket_id}}</td>
         <td class="text-center">{{obj.area}}
-          <br>{{obj.supply_product}}{{obj.product_offer_price}}
         </td>
         <td class="text-center">{{obj.trade}}</td>
         <td class="text-center">{{obj.ins_time}}</td>
