--- a/app/22busscustomer/views/supplierlist.html
+++ b/app/22busscustomer/views/supplierlist.html
@@ -8,7 +8,9 @@
         <th class="col-md-1 text-center">供应商名称</th>
         <th class="col-md-1 text-center">联系人(电话)</th>
         <th class="col-md-1 text-center">合作范围</th>
-        <th class="col-md-2 text-center">供应商简介</th>
+        <th class="col-md-2 text-center">供应商简介
+            <br>供货产品,产品提供价
+        </th>
         <th class="col-md-1 text-center">店铺类型</th>
         <th class="col-md-1 text-center">申请人(日期)</th>
         <th class="col-md-1 text-center">修改时间</th>
@@ -24,7 +26,9 @@
         <td class="text-center">{{obj.name}}<br>{{obj.mobile}}
         </td>
         <td class="text-center">{{obj.sale_category}}</td>
-        <td class="text-center">{{obj.supplier_profile}}</td>
+        <td class="text-center">{{obj.supplier_profile}}
+            <br>{{obj.supply_product}}{{obj.product_offer_price}}
+        </td>
         
         <td ng-show="obj.assist_sign==0" class="text-center">单店</td>
         <td ng-show="obj.assist_sign==1" class="text-center">连锁</td>
