供应商列表加字段

--- a/app/22busscustomer/views/supplierlist.html
+++ b/app/22busscustomer/views/supplierlist.html
@@ -9,7 +9,7 @@
         <th class="col-md-1 text-center">联系人(电话)</th>
         <th class="col-md-1 text-center">合作范围</th>
         <th class="col-md-2 text-center">供应商简介
-            <br>供货产品,产品提供价
+            <br>供货产品,产品供货价
         </th>
         <th class="col-md-1 text-center">店铺类型</th>
         <th class="col-md-1 text-center">申请人(日期)</th>
@@ -27,7 +27,7 @@
         </td>
         <td class="text-center">{{obj.sale_category}}</td>
         <td class="text-center">{{obj.supplier_profile}}
-            <br>{{obj.supply_product}}{{obj.product_offer_price}}
+            <br>{{obj.supply_product}} {{obj.product_offer_price}}
         </td>
         
         <td ng-show="obj.assist_sign==0" class="text-center">单店</td>
