绑定登录用户

--- a/app/02device/views/module.html
+++ b/app/02device/views/module.html
@@ -49,6 +49,16 @@
 	</div>
 
 	<div class="form-group">
+		<label class="col-xs-2 control-label">绑定登录用户</label>
+		<div class="col-xs-6">
+			<input type="text" class="form-control" placeholder="请输入密码" ng-model="obj.seller_login_code">
+		</div>
+		<div class="col-xs-4">
+			<p class="text-danger mt10">自助售票机，双屏pos机填写此项</p>
+		</div>
+	</div>
+
+	<div class="form-group">
 		<label class="col-xs-2 control-label">设备状态</label>
 		<div class="col-xs-6">
 			<label class="radio-inline">
