--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -125,6 +125,17 @@
 			</div>
 		</div>
 	</div>
+	
+	
+	<!-- 智游宝 -->
+	<div class="col-xs-12 col-md-12 mt10" ng-show="affirm.sysaffirm_target_code == 'supply_zhiyoubao'">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">商品id</label>
+			<div class="col-xs-10">
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_code"></p>
+			</div>
+		</div>
+	</div>
 
 		
 </div>
