--- a/app/14statistics/views/viewlist.html
+++ b/app/14statistics/views/viewlist.html
@@ -11,7 +11,7 @@
                 ng-options="view.code as view.name for view in viewarr"
                 ng-change="change(viewcode)"
               >
-                  <option value=""> -- 全部景区111111 -- </option>
+                  <option value=""> -- 全部景区 -- </option>
               </select>
               &nbsp;&nbsp;&nbsp;&nbsp;
 
