--- a/app/07product/views/p_tickettype.html
+++ b/app/07product/views/p_tickettype.html
@@ -45,7 +45,7 @@
 					<th class="col-md-1 text-center">票种属性</th>
 					<th class="col-md-2 text-center">有效期开始</th>
 					<th class="col-md-2 text-center">有效期结束</th>
-					<th class="col-md-2 text-center">是否预约</th>
+					<th class="col-md-2 text-center">是否需要预约</th>
 					<th class="col-md-1 text-center" ng-if="saleobj.state == '0' || saleobj.state == '2'">操作</th>
 				</tr>
 			</thead>
