--- a/app/07product/views/appointmentbaseinfo.html
+++ b/app/07product/views/appointmentbaseinfo.html
@@ -11,7 +11,7 @@
 				<font face="Courier" class="text-danger">此名称用于设置改产品的预约名称</font>
 			</div>
 		</div>
-		
+
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">预约须知</label>
 			<div class="col-sm-4 col-xs-12">
@@ -21,7 +21,7 @@
 				<font face="Courier" class="text-danger">此名称用于设置改产品的预约须知</font>
 			</div>
 		</div>
-		
+
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">排序</label>
 			<div class="col-sm-4 col-xs-12">
@@ -32,20 +32,70 @@
 			</div>
 		</div>
 
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">入场开始时间</label>
+			<div class="col-sm-2 col-xs-12">
+				<ui-select ng-model="info.admission_start_time_hour" theme="bootstrap" ng-change="changeview(searchform)">
+					<ui-select-match placeholder="时">{{$select.selected}}</ui-select-match>
+					<ui-select-choices  repeat="item in hourArr | filter: $select.search">
+						<span ng-bind-html="item | highlight: $select.search"></span>
+						<!--<span ng-bind-html="item.code | highlight: $select.search"></span>-->
+					</ui-select-choices>
+				</ui-select>
+			</div>
+			<div class="col-sm-2 col-xs-12">
+				<ui-select ng-model="info.admission_start_time_minute" theme="bootstrap" ng-change="changeview(searchform)">
+					<ui-select-match placeholder="分">{{$select.selected}}</ui-select-match>
+					<ui-select-choices  repeat="item in minuteArr | filter: $select.search">
+						<span ng-bind-html="item | highlight: $select.search"></span>
+						<!--<span ng-bind-html="item.code | highlight: $select.search"></span>-->
+					</ui-select-choices>
+				</ui-select>
+			</div>
+			<div class="col-sm-6 mt10">
+				<font face="Courier" class="text-danger">此名称用于设置验票进场开始时间</font>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">入场结束时间</label>
+			<div class="col-sm-2 col-xs-12">
+				<ui-select ng-model="info.admission_end_time_hour" theme="bootstrap" ng-change="changeview(searchform)">
+					<ui-select-match placeholder="时">{{$select.selected}}</ui-select-match>
+					<ui-select-choices  repeat="item in hourArr | filter: $select.search">
+						<span ng-bind-html="item | highlight: $select.search"></span>
+						<!--<span ng-bind-html="item.code | highlight: $select.search"></span>-->
+					</ui-select-choices>
+				</ui-select>
+			</div>
+			<div class="col-sm-2 col-xs-12">
+				<ui-select ng-model="info.admission_end_time_minute" theme="bootstrap" ng-change="changeview(searchform)">
+					<ui-select-match placeholder="分">{{$select.selected}}</ui-select-match>
+					<ui-select-choices  repeat="item in minuteArr | filter: $select.search">
+						<span ng-bind-html="item | highlight: $select.search"></span>
+						<!--<span ng-bind-html="item.code | highlight: $select.search"></span>-->
+					</ui-select-choices>
+				</ui-select>
+			</div>
+			<div class="col-sm-6 mt10">
+				<font face="Courier" class="text-danger">此名称用于设置验票进场结束时间</font>
+			</div>
+		</div>
+
 		<div class="col-xs-12 text-center">
-		<br/>
-		<br/>
-		<button class="btn btn-success" ng-click="save()">保存</button>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-	</div>
+			<br/>
+			<br/>
+			<button class="btn btn-success" ng-click="save()">保存</button>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+		</div>
 
 	</div>
-	
 
-		
+
+
 
 
 </div>
