--- a/app/07product/views/appointmentlist.html
+++ b/app/07product/views/appointmentlist.html
@@ -24,8 +24,8 @@
     <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">预约名称</th>
-        <th class="col-md-1 text-center">预约时间</th> 
+        <th class="col-md-1 text-center">预约名称</th>
+        <th class="col-md-2 text-center">预约时间</th> 
         <th class="col-md-2 text-center">产品名称</th>
         <th class="col-md-2 text-center">票种名称</th> 
         <th class="col-md-2 text-center">入场时间</th> 
@@ -36,9 +36,9 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.title}}</td>
-        <td class="text-center">{{obj.start_time}}</td>
-        <td class="text-center">{{obj.sale_name}}</td>
-        <td class="text-center">{{obj.ticket_name}}</td>    
+        <td class="text-center" ng-bind-html="obj.start_time"></td>
+        <td class="text-center" ng-bind-html="obj.sale_name"></td>
+        <td class="text-center" ng-bind-html="obj.ticket_name"></td>    
         <td class="text-center">{{obj.admission_start_time}}--{{obj.admission_end_time}}</td>    
         <td class="text-center">{{obj.asort}}</td>          
         <td class="text-center">
