订单唯一码

--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -21,6 +21,9 @@
                    >
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
+                  <input type="text" class="form-control" ng-keyup="myKeyup($event)" ng-model="searchform.order_unique_code"  placeholder="订单唯一码">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+
                   <!-- <input type="text" class="form-control" ng-model="searchform.ticket_state" placeholder="票状态"> -->
                   <!-- <select class="form-control" 
                   ng-model="searchform.ticket_state" 
