--- a/app/13order/views/marketOrderList.html
+++ b/app/13order/views/marketOrderList.html
@@ -90,7 +90,7 @@
 				<th class="text-center">
 					<a ng-click="ticketlist(obj)" class="btn btn-success btn-xs">票信息</a>
 					<br>
-					<a ng-click="orderinfo(obj)" class="btn btn-info btn-xs" has-permission='orderinfo'>订单详情</a>
+					<a ng-click="orderinfo(obj)" class="btn btn-info btn-xs" >订单详情</a>
 					<br>
 					<a ng-click="resend(obj)" class="btn btn-danger btn-xs" ng-show="obj.sale_belong != 'juyou' || (obj.ticket_state == '2' && obj.sms_state == '2')">重发短信</a>
 					<a ng-click="relay(obj)" class="btn btn-warning btn-xs" ng-show="obj.sale_belong != 'juyou' || (obj.ticket_state == '2' && obj.sms_state == '2')">转发短信</a>
