票种默认值

--- a/app/07product/views/p_tickettype.html
+++ b/app/07product/views/p_tickettype.html
@@ -82,9 +82,9 @@
 					<td class="text-center">
 
 		                <select class="form-control" ng-model="obj.appoint">
-			                <option value="">请选择</option>
-			                <option value="1">需要预约</option>
+			                <!--<option value="">请选择</option>-->
 			                <option value="0">无需预约</option>
+			                <option value="1">需要预约</option>
 		                </select>
 
 					</td>
