--- a/app/07product/views/appointmentscreening.html
+++ b/app/07product/views/appointmentscreening.html
@@ -42,7 +42,7 @@
             <div class="form-group">
 			<label class="col-sm-1 col-xs-12 control-label">库存</label>
 			<div class="col-sm-2 col-xs-12">
-				<input type="text" class="form-control" placeholder="库存数量" ng-model="info.stock_num">
+				<input type="Number" class="form-control" placeholder="库存数量" ng-model="info.stock_num">
 			</div>
             <div class="col-xs-1">
 				<a ng-click="add()" class="btn btn-success btn-sm">添加</a>
