--- a/app/13order/views/orderinfo.html
+++ b/app/13order/views/orderinfo.html
@@ -203,9 +203,9 @@
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">公司</label>
+            <label class="col-xs-6 control-label">出游时间</label>
             <div class="col-xs-6">
-                <p class="form-control-static">{{obj.company_id}}</p>
+                <p class="form-control-static">{{obj.tour_date}}</p>
             </div>
         </div>
         </div>
