--- a/app/07product/views/productinforestrictrule.html
+++ b/app/07product/views/productinforestrictrule.html
@@ -292,7 +292,7 @@
 			</div>
 		</div>
 
-		<div class="form-group">
+		<!--<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">下架通知</label>
 			<div class="col-sm-4 col-xs-12">
 				<p class="form-control-static">{{saleobj.over_period_off_mobile}}</p>
@@ -314,7 +314,7 @@
 					过期自动下架通知手机号
 				</p>
 			</div>
-		</div>
+		</div>-->
 
 		<!--<div class="form-group" ng-if="util.what == 'edit'">
 			<label class="col-sm-2 col-xs-12 control-label"></label>
