--- a/app/07product/views/p_affirm.html
+++ b/app/07product/views/p_affirm.html
@@ -158,6 +158,35 @@
 			</div>-->
 		</div>
 	</div>
+	
+	<!-- 小径网络 -->
+	<div class="col-xs-10" 
+		ng-show="affirm.sysaffirm_target_code == 'supply_xiaojing'">
+		<div class="form-group">
+			<label class="col-xs-2 control-label">景区编码</label>
+			<div class="col-xs-10">
+				<input type="text" class="form-control"
+				ng-model="affirm.sysaffirm_target_goods_code"  ng-disabled="util.what == 'info'"
+				>
+			</div>
+			<br/>
+			<br/>
+			<label class="col-xs-2 control-label">门票编码</label>
+			<div class="col-xs-10">
+				<input type="text" class="form-control"
+				ng-model="affirm.sysaffirm_target_goods_view"  ng-disabled="util.what == 'info'"
+				>
+			</div>
+			<br/>
+			<br/>			
+			<label class="col-xs-2 control-label">门票ID</label>
+			<div class="col-xs-10">
+				<input type="text" class="form-control"
+				ng-model="affirm.sysaffirm_target_goods_supply"  ng-disabled="util.what == 'info'"
+				>
+			</div>
+		</div>
+	</div>
 
 	<div class="col-xs-10"  ng-if="(saleobj.state == '0' || saleobj.state == '2') && (util.what != 'info')">
 		<div class="form-group">
