--- a/app/21card/views/cardproductinfo.html
+++ b/app/21card/views/cardproductinfo.html
@@ -214,6 +214,22 @@
 	    </div>
   	</div>
 
+  	<div class="form-group form-inline">
+	    <label class="col-xs-3 control-label">是否独立</label>
+	    <div class="col-xs-9 form-inline">
+		    <label class="radio-inline">
+			 <input type="radio" name="independent" value="0"
+				  ng-model="obj.independent"
+				  >不独立</label>
+
+		    <label class="radio-inline">
+			<input type="radio" name="independent" value="1"
+				  ng-model="obj.independent"
+				  >独立</label>
+            </select>
+	    </div>
+  	</div>
+
 	<div class="form-group">
 		<label class="col-xs-3 control-label">备注</label>
 		<div class="col-xs-9">
