--- a/app/21card/views/cardpoollist.html
+++ b/app/21card/views/cardpoollist.html
@@ -60,7 +60,7 @@
 	        	<a ng-click="relief(cardpool.pool_code)" class="btn btn-danger btn-xs">释放卡</a><br>
 	        	<button type="button" class="btn btn-warning btn-xs" ng-click="addcardpool(cardpool)">编辑</button>
 	        	<a ng-click="release(cardpool.pool_code)" class="btn btn-info btn-xs">卡池详情</a>
-	        	<a ng-click="active()" class="btn btn-warning btn-xs">自动激活</a>
+	        	<a ng-click="active(cardpool.pool_code)" class="btn btn-warning btn-xs">自动激活</a>
 	        </td>
 	      </tr>
 	    </tbody>
