--- a/app/07product/views/p_baseinfo.html
+++ b/app/07product/views/p_baseinfo.html
@@ -73,6 +73,20 @@
 				<font face="Courier" class="text-danger"></font>
 			</div>
 		</div>
+
+		<div class="form-group">
+			<!--<label class="col-sm-3 col-xs-12 control-label">分销商成本价格</label>-->
+			<label class="col-sm-2 col-xs-12 control-label">采购价格</label>
+			<div class="col-sm-4 col-xs-12">
+				<div class="input-group">
+					<span class="input-group-addon">¥</span>
+					<input type="number" class="form-control" placeholder="请输入供应商成本价格" min='0' ng-model="saleobj.purchase_price" ng-disabled="util.what == 'info'">
+				</div>
+			</div>
+			<div class="col-sm-6 mt10">
+				<font face="Courier" class="text-danger"></font>
+			</div>
+		</div>
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">产品排序</label>
 			<div class="col-sm-4 col-xs-12">
