--- a/app/07product/views/productinfobaseinfo.html
+++ b/app/07product/views/productinfobaseinfo.html
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6 mt10">
-				<font face="Courier" class="text-danger">下单支付价格</font>
+				<font face="Courier" class="text-danger"></font>
 			</div>
 		</div>
 
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6 mt10">
-				<font face="Courier" class="text-danger"></font>
+				<font face="Courier" class="text-danger">与分销商结算价，APP(微信)为游客支付价格</font>
 			</div>
 		</div>
 
@@ -86,7 +86,7 @@
 				</div>
 			</div>
 			<div class="col-sm-6 mt10">
-				<font face="Courier" class="text-danger"></font>
+				<font face="Courier" class="text-danger">与供应商结算价</font>
 			</div>
 		</div>
 
