--- a/app/01ticket/views/testtest.html
+++ b/app/01ticket/views/testtest.html
@@ -29,4 +29,11 @@
 		</form>
 	</div>
 </div>
+
+<div class="panel panel-default">
+	<div class="panel-heading text-center "><h4>测试excel导入</h4></div>
+	<input type="file" ng-model="a"/>
+	<button class="btn btn-primary" type="button" ng-click="import()">导入</button>
+	
+</div>
 </div>
