--- a/app/22busscustomer/views/bargainlist.html
+++ b/app/22busscustomer/views/bargainlist.html
@@ -75,7 +75,7 @@
       max-size="maxSize" 
       class="pagination-sm" 
       boundary-links="true" 
-      ng-change="search()"
+      ng-change="getlist()"
       items-per-page="itemsPerPage"
       previous-text="上一页"
       next-text="下一页"
